--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "types": "types",
-    "bin": "build/bin/ttf-2-woff.js",
+    "bin": "./build/bin/ttf-2-woff.js",
     "homepage": "https://github.com/JAYD3V/ttf-2-woff#readme",
     "author": "Andrew Chambers <W3Dojo@Gmail.com>",
     "license": "Apache-2.0",
